--- a/templates/group/group-form.html
+++ b/templates/group/group-form.html
@@ -9,6 +9,7 @@
 
 
 {{ define "content" }}
+    {{ $csrf := .csrf }}
     {{ $hxreq := .IsHXRequest }}
     {{ $url := .url }}
     {{ $errors := .data.Errors }}
@@ -20,6 +21,7 @@
                 {{ template "title" . }}
             </header>
             <form method="post" id="group-form">
+                <input type="hidden" value="{{ $csrf }}" name="csrf" id="csrf"/>
                 <div>
                     <label>Sport</label>
                     <input type="text" name="sport" id="sport" value="{{ .Sport }}">
@@ -45,7 +47,6 @@
                     <label for="country">Country</label><input type="text" name="country" id="country" value="{{ .Country }}">
                     {{ if $errors.country }}<p class="error"><small><em>{{ $errors.country }}</em></small></p>{{ end }}
                 </div>
-                <span class="grid">
                     <button type="submit" value="save" class="primary" {{ template "hxmethod" . }}="{{ $url }}" hx-target="#group-modal" hx-swap="delete">Save</button>
                     <button type="reset" value="reset" class="contrast" data-target="group-modal" hx-get="#" hx-target="#group-modal" hx-swap="delete">Cancel</button>
                     <button type="submit" value="delete" class="secondary" hx-delete="{{ $url }}" hx-target="#group-modal" hx-swap="delete" hx-confirm="Do you really want to delete {{ .Name }}?">Delete</button>
